# drop2beets

./: .gitignore  README.md  pyproject.toml
beetsplug/: drop2beets.py
drop2beets/: __init__.py
