[project]
name = "drop2beets"
version = "2.1.0"
description = "Import singles to Beets as soon as they are dropped in a folder"
authors = [
    { name = "Martin Kirchgessner", email = "martink@gresille.org" },
]
license = "WTFPL"
readme = "README.md"
requires-python = ">=3.10,<4"
homepage = "https://github.com/martinkirch/drop2beets"
repository = "https://github.com/martinkirch/drop2beets.git"
keywords = ["watch", "beets", "music", "import"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Multimedia :: Sound/Audio"
]
dependencies = [
    "watchdog (>=6.0.0,<7.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "beets (>=2.5.1,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "beetsplug" },
    { include = "drop2beets" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
